--- a/Android/app/src/main/res/layout/activity_register.xml
+++ b/Android/app/src/main/res/layout/activity_register.xml
@@ -33,28 +33,31 @@
         android:padding="5dp"
         android:background="#FFFFFF"
         android:layout_height="wrap_content">
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_margin="8dp"
-        android:theme="@style/Theme.AppCompat.Light"
-        android:inputType="textPersonName"
-        android:hint="Username" />
-
-    <Button
-        android:id="@+id/register"
+        <Button
+        android:id="@+id/create_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Create New Wallet"
+        android:text="Create New Account"
         android:textSize="16sp"
         android:layout_marginBottom="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/recover_account"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:text="Add to Existing Account"
+            android:textSize="16sp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
     </LinearLayout>
     <Space
         android:layout_width="match_parent"
