--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:textSize="20sp"
+        android:paddingLeft="8dp"
+        android:paddingTop="16dp"
+        android:layout_height="wrap_content"
+        android:text="Web of Trust:" />
+
     <ListView
         android:id="@+id/listview_with_fab"
+        android:layout_below="@id/textView3"
+        android:paddingTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
